added a new image and resized others

--- a/drawing/drawing.html
+++ b/drawing/drawing.html
@@ -21,9 +21,10 @@
              and he remains a huge influence on me to this day.
         </p>
 
-        <img src="https://marswillsendnomore.files.wordpress.com/2011/05/comicnut034.jpg" width="100%">
-        <img src="https://thumbs.gfycat.com/FloweryBlissfulAnhinga-max-1mb.gif" width="100%">
-        <img src="https://i.makeagif.com/media/7-08-2015/_WxViL.gif" width="100%">
+        <img src="https://img-9gag-fun.9cache.com/photo/a4RX5y6_460s.jpg" width="12.5%">
+        <img src="https://thumbs.gfycat.com/FloweryBlissfulAnhinga-max-1mb.gif" width="33%">
+        <img src="https://i.pinimg.com/originals/b9/88/af/b988af64764aeab179810d9fb1fa3534.jpg" width="15%">
+        <img src="https://i.makeagif.com/media/7-08-2015/_WxViL.gif" width="33%">
 
         <h2>A List of My Favorite Artists</h2>
         <ul>
