--- a/drawing/practice.html
+++ b/drawing/practice.html
@@ -5,20 +5,79 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
+    <link rel="stylesheet" href="styles.css">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class="contentDiv">
+      <h3>Name: Joshua Ashford</h3>
+      <h3>Date: Ongoing</h3>
 
-    <h1>Drawing</h1>
-    <h2>Drawing</h2>
-    <h3>Drawing</h3>
-    <h4>Drawing</h4>
-    <h5>Drawing</h5>
-    <h6>Drawing</h6>
 
+
+
+      <h1>How Drawing Has Influenced My Life</h1>
+      <p>
+          I have been drawing for as long as I can remember. Since the age of 2 I have been trying to replicate images and people that I saw. Sounds crazy I know, 
+          but I assure you that it is the case. I was introduced to drawing through my Father who was an architect and worked on project development in the city 
+          of Detroit. He was also very interested in comics and japanese cartoons growing up and would watch them with me and my brothers. Growing up, my Dad was 
+          my hero, and I wanted to be just like him; thus, my interest in drawing festered, and I began trying to replicate what he did. 
+      </p>
+      <p>
+          One day, my Dad showed me a comic book that he was reading and it changed my life forever. I remember it like it was yesterday. It was a comic book that 
+          became the best selling comic book of all time, selling an amazing 8 million copies. This comic was X-Men #1, and looking at that book as a child sparked
+          a fire within me that still burns to this day. To say that I was mesmerized by it would be an understatement. I wanted to be the characters in the book.
+          I saw a character named Cyclops and wanted to be him. After I understood that was not possible, I settled for creating the stories. From that point on, 
+          I knew that one day I wanted to create these characters and shape their fates just as the artist who drew that book did. That artist's name was Jim Lee, 
+          and he remains a huge influence on me to this day.
+      </p>
+
+      <img src="https://img-9gag-fun.9cache.com/photo/a4RX5y6_460s.jpg" width="12.5%">
+      <img src="https://thumbs.gfycat.com/FloweryBlissfulAnhinga-max-1mb.gif" width="33%">
+      <img src="https://i.pinimg.com/originals/b9/88/af/b988af64764aeab179810d9fb1fa3534.jpg" width="15%">
+      <img src="https://i.makeagif.com/media/7-08-2015/_WxViL.gif" width="33%">
+
+      <h2>A List of My Favorite Artists</h2>
+      <ul>
+          <li>Jim Lee</li>
+          <li>Kim Jung Gi</li>
+          <li>Frank Quitely</li>
+          <li>Karl Kopinski</li>
+          <li>Ryan Lang</li>
+      </ul>
+
+      <p>Link to Drawing Studio SuperAni</p>
+
+      <a href="www.superani.us">Click Here</a>
+      
+      <button>
+          <a href="www.superani.us">Click Here</a>
+      </button>
+
+      <h2>Contact Me For More Information</h2>
+
+      <form>
+          <p>First Name:</p>
+          <input type="text" name="firstName">
+          <p>Last Name:</p>
+          <input type="text" name="lastName">
+          <p>Gender:</p>
+          <input type="radio" name="gender" value="Male">Male
+          <input type="radio" name="gender" value="Female">Female
+          <input type="radio" name="gender" value="Non-Binary">Non-Binary
+          <br><br>
+          <input type="submit" value="submit">
+
+
+
+      </form>
+  
+  </div>
 
 
 
